--- a/fcc_bootstrapnotes.html
+++ b/fcc_bootstrapnotes.html
@@ -1,5 +1,27 @@
-//Font Awesome is a convenient library of icons. These icons can be webfonts or vector graphics. These icons are treated just like fonts. 
+Font Awesome is a convenient library of icons. These icons can be webfonts or vector graphics. These icons are treated just like fonts. 
 You can specify their size using pixels, and they will assume the font size of their parent HTML elements. //
-
+/*
 https://www.freecodecamp.org/learn/front-end-development-libraries/bootstrap/add-font-awesome-icons-to-all-of-our-buttons
+/*
 
+
+
+Now you know three ways of targeting elements: by type: $("button"), by class: $(".btn"), and by id $("#target1").
+
+Although it is possible to add multiple classes in a single .addClass() call, let's add them to the same element in three separate ways.
+
+Using .addClass(), add only one class at a time to the same element, three different ways:
+
+Add the animated class to all elements with type button.
+
+Add the shake class to all the buttons with class .btn.
+
+Add the btn-primary class to the button with id #target1.
+
+Note: You should only be targeting one element and adding only one class at a time. Altogether, your three individual selectors will end up adding the three classes shake, animated, and btn-primary to #target1.
+
+/*
+
+https://www.freecodecamp.org/learn/front-end-development-libraries/jquery/target-the-same-element-with-multiple-jquery-selectors
+
+*/
